force-app/main/default/objects/ProductListItem__c/ProductListItem__c.object-meta.xml
<CustomObject>
    <description>Custom object to store list of products</description>
    <label>Product List Item</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>ItemId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product List Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>