force-app/main/default/objects/ProductListItem__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id of the case owning the product list</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Product List Items</relationshipLabel>
    <relationshipName>Product_List_Items</relationshipName>
    <type>Lookup</type>
</CustomField>