force-app/main/default/objects/ProductListItem__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Product List Items</relationshipLabel>
    <relationshipName>Product_List_Items</relationshipName>
    <type>Lookup</type>
</CustomField>