force-app/main/default/objects/ProductListItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product Code</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product List Items</relationshipLabel>
    <relationshipName>Product_List_Items</relationshipName>
    <type>Lookup</type>
</CustomField>