force-app/main/default/objects/ProductListItem__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <label>Product Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>