force-app/main/default/objects/ProductListItem__c/fields/QuantityConfirmed__c.field-meta.xml
<CustomField>
    <fullName>QuantityConfirmed__c</fullName>
    <description>Quantity confirmed. The meaning of this field depends on the context. For example, in a collection, it is the final quantity put back to stock.</description>
    <label>Quantity Confirmed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>