force-app/main/default/objects/ProductListItem__c/fields/QuantityConfirmedUnit__c.field-meta.xml
<CustomField>
    <fullName>QuantityConfirmedUnit__c</fullName>
    <description>Unit of the quantity confirmed</description>
    <label>Quantity Confirmed Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductUnits</valueSetName>
    </valueSet>
</CustomField>