force-app/main/default/objects/ProductListItem__c/fields/SAPDocument__c.field-meta.xml
<CustomField>
    <fullName>SAPDocument__c</fullName>
    <description>Type of SAP document the product list refers to. Can be INVOICE, ORDER or QUOTE</description>
    <label>SAP Document</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QUOTE</fullName>
            </value>
            <value>
                <fullName>ORDER</fullName>
            </value>
            <value>
                <fullName>INVOICE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>