force-app/main/default/objects/ProductListItem__c/fields/SAPLine__c.field-meta.xml
<CustomField>
    <fullName>SAPLine__c</fullName>
    <description>LIne number of the SAP document linked to this product list</description>
    <label>SAP Line</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>