force-app/main/default/objects/ProductListItem__c/fields/SAPNumber__c.field-meta.xml
<CustomField>
    <fullName>SAPNumber__c</fullName>
    <description>Number of the SAP document the prduct list refers to</description>
    <label>SAP Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>