force-app/main/default/objects/ProductListItem__c/fields/Shipped__c.field-meta.xml
<CustomField>
    <fullName>Shipped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The products have already been sipped to the customer</description>
    <label>Shipped?</label>
    <type>Checkbox</type>
</CustomField>