force-app/main/default/objects/ProductListItem__c/validationRules/SAP_Number_required.validationRule-meta.xml
<ValidationRule>
    <fullName>SAP_Number_required</fullName>
    <active>true</active>
    <description>ENsures a SAP number is entered when SAP Document is not empty</description>
    <errorConditionFormula>NOT(ISBLANK(TEXT(SAPDocument__c))) &amp;&amp; (ISBLANK(SAPNumber__c) || SAPNumber__c = &apos;0&apos;)</errorConditionFormula>
    <errorMessage>SAP Document Number is required</errorMessage>
</ValidationRule>